--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -1,7 +1,460 @@
+.header {
+    padding-top: 3.9rem;
+
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    width: 100%;
+    margin: 0 auto;
+
+    
+    &__inner {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+    
+    }
+    
+    &__logo {
+        width: 13.8rem;
+        height: 2.8rem;
+
+        img {
+            height: 100%;
+            width: 100%;
+            object-fit: contain;
+        }
+    
+    }
+    
+    &__nav {
+    
+    }
+    
+    &__nav-list {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        width: 30rem;
+        
+        
+        li {
+            font-size: 1.7rem;
+            font-weight: 500;
+            color: #FFFFFF;
+        }
+    
+    }
+    
+    &__contact-wrap {
+        display: flex;
+        align-items: center;
+    
+    }
+
+    &__contact-item {
+        display: flex;
+        align-items: center;
+        font-size: 1.7rem;
+        font-weight: 400;
+        color: #FFFFFF;
+
+        img {
+            width: 1.6rem;
+            height: 1.6rem;
+            margin-right: 1rem;
+        }
+
+        &:not(:last-child) {
+            margin-right: 4.4rem;
+        }
+    }
+
+}
+
+
+.banner {
+    position: relative;
+    height: 70.2rem;
+    margin-bottom: 11.5rem;
+
+    &>img {
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    
+    &__inner {
+        display: flex;
+        flex-direction: column;
+        padding-top: 20rem;
+        padding-bottom: 4.5rem;
+        height: 70.2rem;
+    }
+    
+    &__text-block {
+        position: relative;
+        width: 79.5rem;
+    }
+    
+    &__description {
+        font-size: 1.8rem;
+        font-weight: 400;
+        color: #7E779A;
+        margin-bottom: 1.6rem;
+    }
+    
+    &__title {
+        font-size: 6.4rem;
+        font-weight: 700;
+        color: #FFFFFF;
+        margin-bottom: 2.5rem;
+    }
+    
+    &__btn {
+        filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.25));
+        background: linear-gradient(105.96deg, #3F0F72 13.07%, #791281 85.2%);
+        border-radius: 9rem;
+        padding: 2rem 4.4rem;
+        width: 33.3rem;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        font-size: 1.6rem;
+        font-weight: 600;
+        color: #FFFFFF;
+    }
+    
+    &__info {
+        display: flex;
+        align-items: center;
+        margin-top: auto;
+        justify-content: end;
+
+        img {
+            width: 23.3rem;
+            height: 100%;
+            object-fit: contain;
+        }
+    }
+    
+    &__info-key {
+        font-size: 1.7rem;
+        font-weight: 400;
+        color: #FFFFFF;
+    }
+}
+
+.about {
+    margin-bottom: 11.5rem;
+
+    &__inner {
+        display: flex;
+    }
+    
+    &__text-block {
+        width: 57rem;
+        margin-right: 3rem;
+    }
+    
+    &__title {
+        font-size: 4.8rem;
+        font-weight: 700;
+        color: #333333;
+        margin-bottom: 3.3rem;
+    }
+    
+    &__subtitle {
+        font-size: 2rem;
+        font-weight: 500;
+        color: #333333;
+        margin-bottom: 3rem;
+    }
+    
+    &__text {
+        font-size: 1.6rem;
+        font-weight: 400;
+        color: #333333;
+
+        &:not(:last-child) {
+            margin-bottom: 2rem;
+        }
+
+        &:last-child {
+            margin-bottom: 3.7rem;
+        }
+    }
+    
+    &__photo-mini {
+        display: flex;
+        justify-content: space-between;
+
+    
+        img {
+            width: 27rem;
+            height: 19.8rem;
+            object-fit: cover;
+            border-radius: 0.9rem;
+        }
+    }
+    
+    &__photo-block {
+        width: 57rem;
+        border-radius: 0.9rem;
+
+        img {
+            width: 100%;
+            height: 100%;
+            border-radius: inherit;
+            object-fit: cover;
+        }
+    }
+
+}
+
+
+.services {
+    background-color: #F6F4F9;
+    padding: 11.5rem 0;
+    margin-bottom: 11.5rem;
+    
+    &__inner {
+   
+    }
+    
+    &__title {
+        text-align: center;
+        font-size: 4.8rem;
+        font-weight: 700;
+        color: #333333;
+        margin-bottom: 1.4rem;
+    }
+    
+    &__subtitle {
+        text-align: center;
+        font-size: 1.8rem;
+        font-weight: 400;
+        color: #333333;
+        margin-bottom: 4.4rem;
+    }
+    
+    &__content {
+        display: grid;
+        grid-template-columns: 1fr 1fr 1fr 1fr;
+        gap: 3rem;
+    }
+    
+    &__item {
+        background: #FFFFFF;
+        border-radius: 0.9rem;
+        padding: 2.7rem 1.8rem 2.7rem 2.9rem;
+
+        display: flex;
+        align-items: center;
+   
+    }
+    
+    &__item-img {
+        width: 6.6rem;
+        height: 6.6rem;
+        border-radius: 50%;
+        background: linear-gradient(105.96deg, #3F0F72 13.07%, #791281 85.2%);
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        margin-right: 1.7rem;
+        flex-shrink: 0;
+
+        img {
+            width: 3.7rem;
+            height: 3.7rem;
+            object-fit: contain;
+        }
+    }
+    
+    &__item-title {
+        font-size: 1.5rem;
+        font-weight: 500;
+        color: #333333;
+    }
+    
+    
+    
+    
+    
+
+}
+
+
+
+
+
+
+
+
+
+
+
 .feedback {
+    position: relative;
+    padding: 11.3rem 0 0 9rem;
+
+    &>img {
+        position: absolute;
+        inset: 0;
+        z-index: -1;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+
+    &__inner {
+        display: flex;
+
+    }
+
+    &__left {
+        width: 47rem;
+        margin-right: 3rem;
+
+    }
+
+    &__title {
+        font-size: 4.8rem;
+        font-weight: 700;
+        color: #FFFFFF;
+    }
 
     &__form {
         display: flex;
         flex-direction: column;
+        width: 67rem;
+        color: #ffffff;
     }
+
+
+    .form__body {}
+}
+
+.form {
+
+    &__label {
+        display: block;
+        margin-bottom: 2rem;
+
+
+
+        input {
+            background: rgba(7, 11, 47, 0.07);
+            border: 0.2rem solid #473E69;
+            border-radius: 0.4rem;
+
+            font-size: 1.6rem;
+            font-weight: 300;
+            color: #7E779A;
+            width: 100%;
+            height: 5.2rem;
+            padding: 0 2rem;
+
+            &.error {
+                border: 1px solid red;
+            }
+        }
+    }
+
+    textarea {
+        background: rgba(7, 11, 47, 0.07);
+        border: 2px solid #473E69;
+        border-radius: 4px;
+        padding: 1.9rem 2rem;
+        font-size: 1.6rem;
+        font-weight: 300;
+        color: #7E779A;
+        width: 100%;
+        height: 16.3rem;
+        overflow-y: auto;
+        resize: none;
+    }
+
+    &__label-title {
+        color: #807D8D;
+        font-size: 1.2rem;
+        font-weight: 300;
+        margin-bottom: 0;
+
+    }
+
+    &__label-checkbox {
+        display: flex;
+        align-items: center;
+
+        font-size: 1.5rem;
+        font-weight: 300;
+        color: #FFFFFF;
+        margin-bottom: 1rem;
+
+        input {
+            margin-right: 1rem;
+
+
+        }
+    }
+
+    button {
+        font-size: 1.4rem;
+        font-weight: 600;
+        color: #FFFFFF;
+        background: #0B0B35;
+        border-radius: 5rem;
+        border: 1px solid #473E69;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        width: 22.6rem;
+        height: 5.6rem;
+    }
+}
+
+
+.popup {
+    width: 53.9rem;
+    padding: 5.5rem 4.4rem 3.7rem 4.4rem;
+
+    background: #FFFFFF;
+    box-shadow: 0px 0.4rem 3.5rem rgba(0, 0, 0, 0.08);
+    border-radius: 4rem;
+
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    z-index: 10;
+    margin: auto;
+    display: none;
+
+    &.active {
+        display: block;
+    }
+
+    &__body {
+        min-height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        padding: 6rem;
+    }
+
+    &__content {}
 }
