--- a/css/style.css
+++ b/css/style.css
@@ -854,6 +854,14 @@ input[type=number] {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  cursor: pointer;
+}
+.services__item:hover .services__item-img {
+  -webkit-transform: scale(1.1);
+          transform: scale(1.1);
+}
+.services__item:hover .services__item-title {
+  text-shadow: 0px 1px #3F0F72;
 }
 .services__item-img {
   width: 6.6rem;
@@ -872,6 +880,8 @@ input[type=number] {
   margin-right: 1.7rem;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 .services__item-img img {
   width: 3.7rem;
@@ -884,6 +894,8 @@ input[type=number] {
   font-weight: 500;
   color: #333333;
   font-family: "Pragmatica";
+  -webkit-transition: 0.4s;
+  transition: 0.4s;
 }
 
 .publications {
