--- a/sass/_main.scss
+++ b/sass/_main.scss
@@ -256,6 +256,17 @@
 
         display: flex;
         align-items: center;
+        cursor: pointer;
+
+        &:hover {
+            .services__item-img {
+                transform: scale(1.1);
+            }
+
+            .services__item-title {
+                text-shadow: 0px 1px #3F0F72;
+            }
+        }
     }
 
     &__item-img {
@@ -270,6 +281,7 @@
 
         margin-right: 1.7rem;
         flex-shrink: 0;
+        transition: 0.4s;
 
         img {
             width: 3.7rem;
@@ -283,6 +295,7 @@
         font-weight: 500;
         color: #333333;
         font-family: 'Pragmatica';
+        transition: 0.4s;
     }
 }
 
